--- a/ruiresume/index.html
+++ b/ruiresume/index.html
@@ -144,7 +144,7 @@
 				</div>
 				<div class="row-box">
 					<h3>求职意向</h3>
-					<p>WEB前端开发(可实习)</p>
+					<p>WEB前端开发</p>
 				</div>
 				<div class="row-box floowme">
 					<h3>请联系我</h3>
